--- a/Add Modify Delete Users/css/post.css
+++ b/Add Modify Delete Users/css/post.css
@@ -124,7 +124,7 @@ main {
 
 .info {
     width: 100%;
-    padding: 0 5.5%;
+    padding: 0 1.5%;
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
@@ -181,39 +181,6 @@ td {
     padding: 6px 8px;
 }
 
-.user-small {
-    display: none;
-}
-
-@media screen and (max-width:700px) {
-    .user-small {
-        display: block;
-        color: white;
-        font-family: 'Comfortaa', sans-serif;
-        text-decoration: none;
-    }
-
-    .user-small a {
-        font-family: "Poppins", sans-serif;
-        font-size: 1.2em;
-        display: block;
-        text-decoration: none;
-        color: white;
-        border: 2px solid darkgrey;
-        border-radius: 10px;
-        padding: 2px 13px;
-        letter-spacing: 1px;
-    }
-
-    .user-big {
-        display: none;
-    }
-
-    .table {
-        display: none;
-    }
-}
-
 .data {
     color: white;
     font-size: 2em;
@@ -253,4 +220,30 @@ td {
 }
 .active {
     background-color: rgb(62, 60, 60);
+}.table-container {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+@media (max-width: 576px) {
+    table {
+        width: 100%;
+    }
+
+    th, td {
+        font-size: 0.9em;
+        padding: 4px;
+    }
+    .header1{
+        height: auto;
+        flex-wrap: wrap;
+    }
+    header{
+        height: auto;
+    }
+    .header1 .logo,
+.header1 .username,
+.header1 .logout {
+    padding: 10px 0; /* Adds padding inside each child */
+}
 }
