--- a/Add Modify Delete Users/css/add_post.css
+++ b/Add Modify Delete Users/css/add_post.css
@@ -177,3 +177,24 @@ textarea::-webkit-scrollbar {
     textarea::-webkit-scrollbar-thumb:hover {
       background: darkgray;
   }
+
+  @media (max-width: 576px) {
+    .header1{
+        height: auto;
+        flex-wrap: wrap;
+    }
+    header{
+        height: auto;
+    }
+    .header1 .logo,
+.header1 .username,
+.header1 .logout {
+    padding: 10px 0; /* Adds padding inside each child */
+}
+form{
+    width: 90%;
+}
+input, select, textarea{
+    width: 80%;
+}
+}
